[package]
name = "io"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo-server"
path = "src/echo-server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
